quelea (2015.0) stable; urgency=normal
 
  * Moved to Java 8
  * Changed to new skin (Modena) and updated splash screen
  * New feature - Quickly change bible translations via right clicking on schedule list
  * New feature - Broken bibles can be sent to devs for analysis
  * New feature - QR code generator added for mobile lyrics URL
  * New feature - Allow non-breaking lines in song lyrics
  * New feature - Position of UI elements persists across invocations
  * New feature - Song translations can now be exported to PDF
  * New feature - Videos can now auto-play on being set live
  * Bugfix - Quick Edit now works properly
  * Bugfix - FX UI element labels are now translated (such as colours)
  * Bugfix - Translations now show properly when section headings are used
  * Bugfix - Quelea no longer locks up when copying a video background
  * Bugfix - window now remembers maximised state
  * Bugfix - memory leaks fixed
  * Bugfix - DVDs and Blurays now work
  * Bugfix = Youtube videos are now saved in schedules properly
  * Bugfix - Fixed issue with small text not having a shadow
  * Bugfix - Creating a new schedule clears the file (so that "save" will then not save over the previously open schedule.)
  * Bugfix - Chord lines are no longer affected by the auto-translator
  * Bugfix - Partial translations now display properly
  * Various other minor bugfixes

 -- Michael Berry <michael@quelea.org>  Wednesday, 22 Oct 2014 00:00:00 +0000